# pdbgen

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  llvm-debuginfo.patch  types.md
.github/workflows/: cmake.yml
core/: CMakeLists.txt  main.cpp
example/: .gitignore  CMakeLists.txt  build.bat  main.cpp  swap.bat  trace.bat
ghidra/: PdbGen.java
